...
            ),
          }}
        />
        <Tabs.Screen
          name="index"
          options={{
            title: "Biblioteca",
            headerTransparent: isWeb,
            tabBarIcon: ({ color, size }) => (
              <Ionicons name={Platform.OS === "web" ? "library-outline" : "library"} color={color} size={isWeb ? size : 24} />
            ),
          }}
        />
        <Tabs.Screen
          name="history"
          options={{
            title: "Historial",
            tabBarIcon: ({ color, size }) => (
              <Ionicons name={Platform.OS === "web" ? "calendar-outline" : "calendar"} color={color} size={isWeb ? size : 24} />
            ),
          }}
        />
        <Tabs.Screen
...
