...
            <Text
              fontFamily="Fraunces_700Bold"
              size="lg"
              color="$primary800"
              letterSpacing={1.2}
            >
              SCRIPTORIUM
            </Text>
            <Text
              size="2xs"
              letterSpacing={2}
              fontFamily="Fraunces_400Regular"
              color="$textLight500"
...
